[Merton] Fix background form colour on mobile.
Mistakingly removed in 02b18d704.

--- a/web/cobrands/merton/_colours.scss
+++ b/web/cobrands/merton/_colours.scss
@@ -74,6 +74,7 @@ $container-max-width: 60em;
 
 $dropzone-button-text: $merton-jade-j3;
 
+$postcodeform-background: white;
 $postcodeform-color: $primary_b;
 $front-main-h2-color: $primary_b;
 $form-hint-color: $primary_b;
